--- a/public/locales/ara/crypto-landing.json
+++ b/public/locales/ara/crypto-landing.json
@@ -1,6 +1,6 @@
 {
   "header_login": "تسجيل الدخول",
-  "header_register": "تسجيل",
+  "header_launch": "الانتقال الي التطبيق",
   "header_language": "لغة",
   "header_theme": "وضع السمة",
   "header_dark": "داكن",
