--- a/public/locales/eng/crypto-landing.json
+++ b/public/locales/eng/crypto-landing.json
@@ -1,6 +1,6 @@
 {
   "header_login": "log in",
-  "header_register": "register",
+  "header_launch": "Launch App",
   "header_language": "language",
   "header_theme": "Theme mode",
   "header_dark": "dark",
