--- a/public/locales/ara/common.json
+++ b/public/locales/ara/common.json
@@ -46,7 +46,7 @@
   "notif_msg": "هذا مثال لرسالة شائعة الاستخدام للحصول على معلومات مهمة للزوار أو المستخدمين. الرجاء النقر فوق الزر بجانب إغلاق هذه الرسالة.",
   "crypto-landing": {
     "header_login": "تسجيل الدخول",
-    "header_register": "تسجيل",
+    "header_launch": "الانتقال الي التطبيق",
     "header_language": "لغة",
     "header_theme": "وضع السمة",
     "header_dark": "داكن",
