--- a/src/locales/eng/common.json
+++ b/src/locales/eng/common.json
@@ -56,7 +56,7 @@
     "header_benefit": "benefit",
     "header_testimonials": "testimonials",
     "header_contact": "contact",
-    "banner_title": "A better, smarter currency",
+    "banner_title": "A Decentralized Token that Evolved into a Rocking Ecosystem",
     "banner_subtitle": "Trade ,earn and stack crypto on Trading Planet decentralized platform",
     "banner_getstarted": "Get Started",
     "banner_learn": "learn",
