add token chart

--- a/src/locales/eng/crypto-landing.json
+++ b/src/locales/eng/crypto-landing.json
@@ -25,7 +25,7 @@
   "morefeature_subtitle1": "TP token is at the heart of the TradingPlanet ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!",
   "morefeature_title2": "Smart Investments",
   "morefeature_subtitle2": "Time is money. Don’t wait for a transaction to end: open several positions at the same time and continue trading.",
-  "morefeature_title3": "Trade smarter",
+  "morefeature_title3": "Roadmap",
   "morefeature_subtitle3": "On our swap platform you can trade dozens of crypto assets ,from BNB and other popular coins to TP token and other listed tokens .",
   "benefit_title": "Provide everything to monitor your assets",
   "testi_title": "What our members said",
