--- a/src/locales/eng/crypto-landing.json
+++ b/src/locales/eng/crypto-landing.json
@@ -1,6 +1,6 @@
 {
   "header_login": "log in",
-  "header_launch": "Launch App",
+  "header_launch": "Launch Swap",
   "header_language": "language",
   "header_theme": "Theme mode",
   "header_dark": "dark",
