--- a/src/locales/eng/common.json
+++ b/src/locales/eng/common.json
@@ -46,7 +46,7 @@
   "notif_msg": "This is an example of a message that is commonly used for important information to visitors or users. Please click the button beside to close this message.",
   "crypto-landing": {
     "header_login": "log in",
-    "header_launch": "Launch App",
+    "header_launch": "Launch Swap",
     "header_language": "language",
     "header_theme": "Theme mode",
     "header_dark": "dark",
