--- a/src/locales/eng/common.json
+++ b/src/locales/eng/common.json
@@ -68,7 +68,7 @@
     "mainfeature_registered": "Registered Users",
     "mainfeature_invested": "USD Invested",
     "morefeature_title1": "TP makes our planet different.",
-    "morefeature_subtitle1": "TP token is at the heart of the TradingPlanet ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!",
+    "morefeature_subtitle1": "TP token is at the heart of the TradingPlanet ecosystem. Buy it, win it, farm it, spend it, stake it... Trade, earn, you can even vote with it!",
     "morefeature_title2": "Smart Investments",
     "morefeature_subtitle2": "Time is money. Don’t wait for a transaction to end: open several positions at the same time and continue trading.",
     "morefeature_title3": "Roadmap",
