add Buy TP Button

--- a/src/locales/ara/crypto-landing.json
+++ b/src/locales/ara/crypto-landing.json
@@ -12,7 +12,7 @@
   "header_contact": "اتصل",
   "banner_title": "العملة الرقمية تؤدي في السوق بالمقدار المناسب.",
   "banner_subtitle": "توفر منصة التداول الدولية هذه الرموز المبتكرة طريقة أكثر بساطة.",
-  "banner_getstarted": "البدء",
+  "banner_buytp": "Buy TP",
   "banner_viewmarket": "عرض السوق",
   "promo_periode": "مدة العرض",
   "mainfeature_title": "شراء / بيع الأصول الرقمية",
