--- a/src/locales/deu/common.json
+++ b/src/locales/deu/common.json
@@ -58,7 +58,7 @@
     "header_contact": "Kontakt",
     "banner_title": "Digitale Währung führt am Markt in der richtigen Menge.",
     "banner_subtitle": "Diese internationale Handelsplattform bietet innovativen Tokens einen rationalisierten Ansatz.",
-    "banner_getstarted": "Erste Schritte",
+    "banner_buytp": "Buy TP",
     "banner_viewmarket": "Markt anzeigen",
     "promo_periode": "Periode",
     "mainfeature_title": "Digitale Assets kaufen / verkaufen",
