--- a/src/locales/eng/common.json
+++ b/src/locales/eng/common.json
@@ -58,7 +58,7 @@
     "header_contact": "contact",
     "banner_title": "Trading Planet Limit Is The Sky",
     "banner_subtitle": "Trade ,earn and stack crypto on Trading Planet decentralized platform",
-    "banner_getstarted": "Get Started",
+    "banner_buytp": "Buy TP",
     "banner_learn": "White Paper",
     "promo_periode": "Periode",
     "mainfeature_title": "Not Just a Trader Here, You're More Like an Owner",
