--- a/src/locales/ind/crypto-landing.json
+++ b/src/locales/ind/crypto-landing.json
@@ -12,7 +12,7 @@
   "header_contact": "kontak",
   "banner_title": "Prospek mata uang digital di pasar dalam jumlah yang tepat.",
   "banner_subtitle": "Platform perdagangan internasional ini memberikan token inovatif pendekatan yang lebih ramping.",
-  "banner_getstarted": "Memulai",
+  "banner_buytp": "Buy TP",
   "banner_viewmarket": "Lihat Pasar",
   "promo_periode": "Periode",
   "mainfeature_title": "Beli / Jual Aset Digital",
