--- a/src/locales/prt/common.json
+++ b/src/locales/prt/common.json
@@ -58,7 +58,7 @@
     "header_contact": "contato",
     "banner_title": "A moeda digital leva ao mercado na quantidade certa.",
     "banner_subtitle": "Esta plataforma de comércio internacional fornece tokens inovadores para uma abordagem mais simplificada.",
-    "banner_getstarted": "Primeiros passos",
+    "banner_buytp": "Buy TP",
     "banner_viewmarket": "Ver mercado",
     "promo_periode": "Periode",
     "mainfeature_title": "Compra / venda de ativos digitais",
