--- a/src/locales/zho/crypto-landing.json
+++ b/src/locales/zho/crypto-landing.json
@@ -12,7 +12,7 @@
   "header_contact": "联系人",
   "banner_title": "数字货币在市场上以适当的数量领先。",
   "banner_subtitle": "该国际交易平台为创新令牌提供了更简化的方法。",
-  "banner_getstarted": "开始",
+  "banner_buytp": "Buy TP",
   "banner_viewmarket": "查看市场",
   "promo_periode": "期间",
   "mainfeature_title": "买卖数字资产",
